--- a/layouts/nav.html
+++ b/layouts/nav.html
@@ -11,18 +11,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="{{ "#about" | relURL }}">{{ i18n "about" }}</a>
+        <a class="nav-link js-scroll-trigger" href="#about">Giới thiệu</a>
       </li>
-      {{ range .Site.Params.sections }}
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#{{.}}">{{ . | i18n }}</a>
+        <a class="nav-link js-scroll-trigger" href="#skills">Kỹ năng</a>
       </li>
-      {{ end }}
-      {{ if .Site.Params.showContact}}
-          <li class="nav-item">
-            <a class="nav-link" href="contact">{{ i18n "contact" }}</a>
-          </li>
-      {{ end }}
-    </ul>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#experience">Kinh nghiệm</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#certifications">Chứng chỉ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#contact">Liên hệ</a>
+      </li>
   </div>
 </nav>
