--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -2,21 +2,20 @@
     <div class="my-auto">
       <h2 class="mb-5 text-primary">Kỹ Năng Chuyên Môn</h2>
   
+      {{ range .Data.skills }}
       <div class="row">
         <div class="col-md-6 mb-4">
           <div class="skill-card h-100">
-            <h3 class="skill-title mb-4">
-              <i class="fas fa-code mr-2"></i> Lập Trình & Công Cụ
+            <h3 class="skill-title mb-4 text-white">
+              <i class="fas fa-code mr-2 text-primary"></i> Lập Trình & Công Cụ
             </h3>
             
-            <ul class="list-inline dev-icons">
-              {{ range .Data.skills }}
-                {{ range .toolset }}
-                  <li class="list-inline-item">
-                    <i class="{{ .icon }}" title="{{ .name }}"></i>
-                    <div class="skill-name">{{ .name }}</div>
-                  </li>
-                {{ end }}
+            <ul class="list-inline dev-icons text-center">
+              {{ range .toolset }}
+                <li class="list-inline-item mb-3 mx-3">
+                  <i class="{{ .icon }}" title="{{ .name }}"></i>
+                  <div class="skill-name mt-2 text-muted" style="font-size: 0.8rem; font-weight: bold;">{{ .name }}</div>
+                </li>
               {{ end }}
             </ul>
           </div>
@@ -24,23 +23,22 @@
   
         <div class="col-md-6 mb-4">
           <div class="skill-card h-100">
-            <h3 class="skill-title mb-4">
-              <i class="fas fa-users-cog mr-2"></i> Quy Trình & Kỹ Năng Mềm
+            <h3 class="skill-title mb-4 text-white">
+              <i class="fas fa-users-cog mr-2 text-primary"></i> Quy Trình & Kỹ Năng Mềm
             </h3>
             
             <ul class="fa-ul mb-0 workflow-list">
-              {{ range .Data.skills }}
-                {{ range .workflow }}
-                  <li>
-                    <i class="fa-li fa fa-check text-primary"></i>
-                    <span class="text-white">{{ . }}</span>
-                  </li>
-                {{ end }}
+              {{ range .workflow }}
+                <li class="mb-3">
+                  <i class="fa-li fa fa-check text-primary"></i>
+                  <span class="text-white" style="font-size: 1.1rem;">{{ . }}</span>
+                </li>
               {{ end }}
             </ul>
           </div>
         </div>
       </div>
+      {{ end }}
   
     </div>
   </section>
